K8s/test-project-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: test-project
spec:
    replicas: 1
    selector:
        matchLabels:
            app: test-project
    strategy:
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: test-project
        spec:
            containers:
            - name: test-project
              image: michav1/ui:0.1.1
              ports:
              - containerPort: 80
            imagePullSecrets:
            - name: registry-credentials
