K8s/test-project-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: test-project
spec:
    ports:
    -   name: http
        port: 80
        targetPort: 80
    selector: 
        app: test-project
