K8s/service-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-project
  labels:
    app: test-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-project
  template:
    metadata:
      labels:
        app: test-project
    spec:
      containers:
      - name: test-project
        image: michav1/ui:0.1.10
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: test-project
spec:
  selector:
    app: test-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: test-project
            port:
              number: 80
---
