K8s/test-project-mapping.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-project-ingress
spec:
  rules:
      http:
        paths:
          - path: /test-project/
            pathType: Prefix
            backend:
              service:
                name: test-project
                port:
                  number: 80
